--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pen",
-  "version": "0.0.1",
-  "main": "src/pen.js",
+  "version": "0.2.4-alpha1",
+  "main": "index",
+  "format": "cjs",
   "author": "sofish <sofish@icloud.com>",
   "description": "enjoy live editing (+markdown) http://sofish.github.io/pen",
   "repository": {
@@ -16,6 +17,14 @@
   "license": {
     "type": "MIT",
     "url": "https://github.com/sofish/pen/blob/master/license.txt"
+  },
+  "jspm": {
+    "files": [
+      "src/pen.js",
+      "src/markdown.js",
+      "src/pen.css",
+      "src/font/*.*"
+    ]
   },
   "devDependencies": {
     "grunt": "^0.4.5",
