--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pen",
-  "version": "0.2.4-alpha5",
+  "version": "0.2.4-alpha6",
   "author": "sofish <sofish@icloud.com>",
   "main": "index",
   "format": "cjs",
@@ -22,8 +22,7 @@
     "shim": {
       "pen": {
         "deps": [
-          "./src/markdown.js",
-          "./src/pen.css!"
+          "./dist/css/pen.css!"
         ]
       }
     }
@@ -32,7 +31,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-copy": "~1.0.0"
   },
   "scripts": {
     "test": "grunt --verbose"
